[package]
name = "opening-repertoire"
version = "0.2.0"
description = "Generates a chess opening repertoire from a PGN"
repository = "https://github.com/zcesur/opening-repertoire"
readme = "README.md"
authors = ["Zafer Cesur"]
categories = ["games"]
keywords = ["chess", "pgn", "opening", "repertoire"]
edition = "2018"

[dependencies]
pgn-reader = "0.15.0"
clap = "2.33.3"
