[package]
name = "opening-repertoire"
version = "1.1.0"
description = "Build opening repertoires from chess games in PGN format"
repository = "https://github.com/zcesur/opening-repertoire"
readme = "README.md"
authors = ["Zafer Cesur"]
categories = ["games"]
keywords = ["chess", "pgn", "opening", "repertoire"]
edition = "2018"

[dependencies]
pgn-reader = "0.15.0"
clap = "2.33.3"
