[package]
name = "opening-repertoire"
version = "1.2.0"
description = "Build opening repertoires from chess games in PGN format"
repository = "https://github.com/zcesur/opening-repertoire"
readme = "README.md"
authors = ["Zafer Cesur"]
categories = ["games"]
keywords = ["chess", "pgn", "opening", "repertoire"]
edition = "2018"

[dependencies]
pgn-reader = { git = "https://github.com/niklasf/rust-pgn-reader.git", rev = "aa8d542" }
clap = "2.33.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
